--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  font-style: san-serif;
+  font-family: san-serif;
 }
 
 
@@ -10,17 +10,43 @@
   margin: 25px
 }
 
+/* High Scores button */
+#high-scores {
+  color: purple;
+}
+
 
 /* question headers */
 .question {
   display: flex;
   justify-content: center;
+  margin-top: 75px;
+  font-size: 48px;
 }
 
 
 /* quiz content */
 .coding-quiz-text {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  margin-right: 250px;
+  margin-left: 250px;
+  line-height: 1.5;
+  font-size: 24px;
+  text-align: center;
 
 
+}
+
+#start-btn {
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+  height: 25px;
+  font-size: 16px;
+  background-color: purple;
+  color: white;
+  border-radius: 5px;
 }
 
