--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 
-
+/* Header */
 .time-scores {
   display: flex;
   justify-content: space-between;
@@ -39,6 +39,7 @@
 
 }
 
+/* start button */
 #start-btn {
   display: block;
   margin: 0 auto;
@@ -50,3 +51,13 @@
   border-radius: 5px;
 }
 
+
+/* question 1 text */
+#question-text {
+  display: flex;
+  justify-content: center;
+  margin-top: 75px;
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+}
