--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 
-/* quiz content */
+/* intro quiz content */
 .coding-quiz-text {
   display: flex;
   justify-content: center;
@@ -52,13 +52,20 @@
   border-radius: 5px;
 }
 
+/* Controls the questions */
+#question-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 /* question 1 text */
-#question-text {
+/* .question-text {
   display: flex;
   justify-content: center;
   margin-top: 75px;
   font-size: 36px;
   font-weight: bold;
   text-align: center;
-}
+}  */
