formatting the questions and added javascript variable and save score form

--- a/style.css
+++ b/style.css
@@ -53,11 +53,15 @@
 }
 
 /* Controls the questions */
-#question-container {
+.question-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+/* .question-box {
+  text-align: left;
+} */
 
 
 /* question 1 text */
