--- a/style.css
+++ b/style.css
@@ -70,14 +70,18 @@
   font-size: 48px;
 }
 
-changes size of answers */
+/* changes size of answers  */
  .choices button {
-  display: block;
+  display: block; 
   margin: 10px 0;
-  width: 100%;
   font-size: 24px;
   line-height: 1.5;
-  
+  width: 25%;
+}
+
+.choices {
+  display: flex;
+  flex-direction: column;
 }
 
 /* question 1 text */
