--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  display: none;
+  /* display: none; */
 } 
 /* question 1 text */
 /* .question-text {
