--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
 /* High Scores button */
 #high-scores {
   color: purple;
+  background-color: white;
+  border: none;
+  font-size: 16px;
+
 }
 
 
